--- a/assessment.html
+++ b/assessment.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>あなたのいいところ診断</title>
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https://st-ron-gyen.github.io/assessment/assessment.html" />
+    <meta property="og:title" content="あなたのいいところ診断" />
+    <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" />
     <link rel="stylesheet" href="assessment.css">
 </head>
 
