--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>あなたのいいところ診断</title>
+    <title>st-ron-gyenが作ったあなたのいいところ診断</title>
     <meta name="twitter:card" content="summary" />
     <meta property="og:url" content="https://st-ron-gyen.github.io/assessment/assessment.html" />
     <meta property="og:title" content="あなたのいいところ診断" />
